--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,44 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary yamm">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Shopper</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="products">Products <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Categories
+        </a>
+        <div class="dropdown-menu">
+          <div class="yamm-content categories-menu">
+            <div class="row">
+              <ul class="col list-unstyled">
+                <li>
+                  <p>Links Title</p>
+                </li>
+                <li><a href="#"> Link Item </a></li>
+                <li><a href="#"> Link Item </a></li>
+                <li><a href="#"> Link Item </a></li>
+                <li><a href="#"> Link Item </a></li>
+                <li><a href="#"> Link Item </a></li>
+                <li><a href="#"> Link Item </a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+    <span class="navbar-text float-xs-right text-muted">
+       Logged In as, Guest
+       </span>
+  </div>
+</nav>
+<div class="container">
+  <router-outlet></router-outlet>
+  <!--<simple-notifications [options]="notificationOptions"></simple-notifications>-->
+</div>
