add product summary rendering element & created home page showing featured products

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,7 +9,13 @@
     {
         .list-unstyled
         {
-            min-width: 150px;
+            min-width: 300px;
         }
     }
+}
+
+.page-content-container
+{
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
