--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
        </span>
   </div>
 </nav>
-<div class="container">
+<div class="container page-content-container">
   <router-outlet></router-outlet>
   <!--<simple-notifications [options]="notificationOptions"></simple-notifications>-->
 </div>
