--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,11 @@
             min-width: 300px;
         }
     }
+
+    .secondary-nav
+    {
+        margin-right: 10px;
+    }
 }
 
 .page-content-container
